creating person view
